Fix @include mixin syntax, add align item position absolute horizontally

--- a/_utilities.scss
+++ b/_utilities.scss
@@ -4,6 +4,12 @@
 	@include transform(translateY(-50%));
 }
 
+@include placeholder('center-horizontal-pos-a') {
+	position: absolute;
+	left: 50%;
+	@include transform(translateX(-50%));
+}
+
 @include placeholder('center-element-pos-a') {
 	position: absolute;
 	top: 50%;
